--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   "require":{
     "php":">=5.3",
     "contao/core":">=3.2,<3.6",
-    "kirsten-roschanski/contao-extended-core-dca":"*"
+    "kirsten-roschanski/contao-extended-core-dca":"*",
     "kirsten-roschanski/contao-extended-news-dca":"*"
   }
 }
