--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,11 @@
     "contao/core":">=3.2,<3.6",
     "kirsten-roschanski/contao-extended-core-dca":"*",
     "kirsten-roschanski/contao-extended-news-dca":"*"
+  },
+  "extra":{
+    "branch-alias": {
+      "dev-master": "1.0.x-dev"
+    }
   }
+  
 }
